# psx-chd-renamer_revamp

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml
assets/: psxdatacenter_cache.json
lib/: main.py
lib/common/: assets.py  regions.py
lib/identify/: __init__.py  chd_util.py  iso_util.py  serials.py
lib/lookup/: __init__.py  pdc.py  redump.py  utils.py
lib/rename/: __init__.py
tests/: test_identify_unittest.py  test_lookup_unittest.py  test_main_e2e_unittest.py  test_rename_unittest.py  test_serials_unittest.py
