[project]
name = "psx-chd-renamer"
version = "0.1.0"
description = "Utility for renaming PS1 CHD and ISO files with standardized, metadata-aware naming conventions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pathlib>=1.0.1",
    "requests>=2.34.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[dependency-groups]
dev = ["pytest>=7.0"]
